/*
 * @Author: lijiansheng 
 * @Date: 2019-05-17 15:53:27 
 * @Last Modified by: lijiansheng
 * @Last Modified time: 2019-05-17 17:28:15
 */

syntax = "proto3";

package sso;

message UserInfo {
  string username = 1;
  string avatar = 2;
  string nickname = 3;
}

message LogoutResult {
  int32 code = 1;
  string message = 2;
}

message TokenResult { 
    int32 code = 1; 
}

message RefreshTokenResult {
  int32 code = 1;
  string access_token = 2;
  string refresh_token = 3;
}

service SsoService {
  rpc Token(TokenRequest) returns (TokenResult);
  rpc Verify(AccessTokenRequest) returns (UserInfo);
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResult);
  rpc Logout(AccessTokenRequest) returns (LogoutResult);
}

message TokenRequest {
  string username = 1;
  string password = 2;
}

message AccessTokenRequest { 
    string access_token = 1; 
}

message RefreshTokenRequest { 
    string refresh_token = 1;
}
